<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/appointment_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/appointment_id_label"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/appointment_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/appointment_name_label" />

    <TextView
        android:id="@+id/appointment_date_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/appointment_date_time_label" />
</LinearLayout>