<?xml version="1.0" encoding="utf-8"?>
<androidx.wear.widget.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".activity.AddAppointmentActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <EditText
                android:id="@+id/appointment_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/appointment_name"
                android:inputType="text"
                android:minHeight="25dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/selected_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/select_date_hint" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/pick_date_button"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:background="@drawable/rounded_corners"
                    android:text="@string/pick_date"
                    android:textAllCaps="false"
                    android:textColor="@color/text_color"
                    android:textSize="10sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/selected_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/select_time_hint" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/pick_time_button"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:background="@drawable/rounded_corners"
                    android:text="@string/pick_time"
                    android:textAllCaps="false"
                    android:textColor="@color/text_color"
                    android:textSize="10sp" />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/schedule_button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/rounded_corners"
                android:text="@string/schedule"
                android:textAllCaps="false"
                android:textColor="@color/text_color"
                android:textSize="10sp" />

        </LinearLayout>
    </ScrollView>
</androidx.wear.widget.BoxInsetLayout>
